[tool.poetry]
name = "loadtxt"
version = "1.0.0"
description = "Loads Text from string or file and returns it as a `str`"
authors = ["Gumshoe Media Inc. <gumshoe.media.inc@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
