[tool.poetry]
name = "loadtxt"
version = "1.0.0"
description = "Load text from a file or string."
authors = ["Gumshoe Media Inc. <gumshoe.media.inc@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.24.0"
coverage = "^6.3"
pytest-cov = "^3.0.0"

[tool.coverage.paths]
source = ["loadtxt", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["loadtxt"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_variable = "pyproject.toml:tool.poetry.version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"  # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
